apps/auto-bookmarks/ingresses/bookmarks-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
  name: bookmarks-ingress
  labels:
    name: bookmarks-ingress

spec:
  ingressClassName: traefik
  rules:
  - host: INGRESS_HOST_PLACEHOLDER
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bookmarks-service
            port: 
              number: 80
